update to dev plots

--- a/development/washington_dev.ipynb
+++ b/development/washington_dev.ipynb
@@ -113,16 +113,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Washington', 'Illinois', 'California', 'Arizona', 'Massachusetts',\n",
+       "       'Wisconsin', 'Texas', 'Nebraska', 'Utah', 'Oregon', 'Florida',\n",
+       "       'New York', 'Rhode Island', 'Georgia', 'New Hampshire',\n",
+       "       'North Carolina', 'New Jersey', 'Colorado', 'Maryland', 'Nevada',\n",
+       "       'Tennessee', 'Hawaii', 'Indiana', 'Kentucky', 'Minnesota',\n",
+       "       'Oklahoma', 'Pennsylvania', 'South Carolina',\n",
+       "       'District of Columbia', 'Kansas', 'Missouri', 'Vermont',\n",
+       "       'Virginia', 'Connecticut', 'Iowa', 'Louisiana', 'Ohio', 'Michigan',\n",
+       "       'South Dakota', 'Arkansas', 'Delaware', 'Mississippi',\n",
+       "       'New Mexico', 'North Dakota', 'Wyoming', 'Alaska', 'Maine',\n",
+       "       'Alabama', 'Idaho', 'Montana', 'Puerto Rico', 'Virgin Islands',\n",
+       "       'Guam', 'West Virginia', 'Northern Mariana Islands'], dtype=object)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "states = ['New York', 'Washington', 'California']"
+    "states = df['state'].unique()\n",
+    "states"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,11 +176,11 @@
     "    line = plt.plot(new_df['date'], rolling_cases, color=(0.47, 0.40, 0.60))\n",
     "    bar = plt.bar(new_df['date'], new_df['new_cases'], color=(0.47, 0.40, 0.60), alpha=0.1, width=1)\n",
     "    plt.xticks(ticks=date_seventh[1:13], rotation=45, fontname='Arial', fontsize=10)\n",
-    "    # plt.title('Seven Day Rolling Average New COVID-19 Cases')\n",
+    "    plt.title(f'New COVID-19 Cases {state}')\n",
     "    plt.ylabel('Cases (N)', fontname='Arial', fontsize=12)\n",
     "    plt.xlabel('Date', fontname='Arial', fontsize=12)\n",
     "    plt.legend(line, ('Rolling Average',), loc='upper left', frameon=False)\n",
-    "    plt.savefig(f'{state}_bar_roll_plot.png', dpi=None, facecolor='w', edgecolor='w', orientation='portrait')\n",
+    "    plt.savefig(f'plots/{state}_bar_roll_plot.png', dpi=None, facecolor='w', edgecolor='w', orientation='portrait')\n",
     "\n",
     "    # plt.show()\n",
     "    plt.close()"
