--- a/development/washington_dev.ipynb
+++ b/development/washington_dev.ipynb
@@ -113,39 +113,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['Washington', 'Illinois', 'California', 'Arizona', 'Massachusetts',\n",
-       "       'Wisconsin', 'Texas', 'Nebraska', 'Utah', 'Oregon', 'Florida',\n",
-       "       'New York', 'Rhode Island', 'Georgia', 'New Hampshire',\n",
-       "       'North Carolina', 'New Jersey', 'Colorado', 'Maryland', 'Nevada',\n",
-       "       'Tennessee', 'Hawaii', 'Indiana', 'Kentucky', 'Minnesota',\n",
-       "       'Oklahoma', 'Pennsylvania', 'South Carolina',\n",
-       "       'District of Columbia', 'Kansas', 'Missouri', 'Vermont',\n",
-       "       'Virginia', 'Connecticut', 'Iowa', 'Louisiana', 'Ohio', 'Michigan',\n",
-       "       'South Dakota', 'Arkansas', 'Delaware', 'Mississippi',\n",
-       "       'New Mexico', 'North Dakota', 'Wyoming', 'Alaska', 'Maine',\n",
-       "       'Alabama', 'Idaho', 'Montana', 'Puerto Rico', 'Virgin Islands',\n",
-       "       'Guam', 'West Virginia', 'Northern Mariana Islands'], dtype=object)"
+       "55"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "states = df['state'].unique()\n",
-    "states"
+    "len(states)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +168,8 @@
     "    plt.title(f'New COVID-19 Cases {state}')\n",
     "    plt.ylabel('Cases (N)', fontname='Arial', fontsize=12)\n",
     "    plt.xlabel('Date', fontname='Arial', fontsize=12)\n",
-    "    plt.legend(line, ('Rolling Average',), loc='upper left', frameon=False)\n",
+    "    plt.fill_between(new_df['date'], rolling_cases, color=(0.47, 0.40, 0.60), alpha=0.5)\n",
+    "    plt.legend(line, ('7 Day Rolling Average',), loc='upper left', frameon=False)\n",
     "    plt.savefig(f'plots/{state}_bar_roll_plot.png', dpi=None, facecolor='w', edgecolor='w', orientation='portrait')\n",
     "\n",
     "    # plt.show()\n",
