update dev plots

--- a/development/washington_dev.ipynb
+++ b/development/washington_dev.ipynb
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
     "    line = plt.plot(new_df['date'], rolling_cases, color=(0.47, 0.40, 0.60))\n",
     "    bar = plt.bar(new_df['date'], new_df['new_cases'], color=(0.47, 0.40, 0.60), alpha=0.1, width=1)\n",
     "    plt.xticks(ticks=date_seventh[1:13], rotation=45, fontname='Arial', fontsize=10)\n",
-    "    plt.title(f'New COVID-19 Cases {state}')\n",
+    "    # plt.title(f'New COVID-19 Cases {state}')\n",
     "    plt.ylabel('Cases (N)', fontname='Arial', fontsize=12)\n",
     "    plt.xlabel('Date', fontname='Arial', fontsize=12)\n",
     "    plt.fill_between(new_df['date'], rolling_cases, color=(0.47, 0.40, 0.60), alpha=0.5)\n",
