--- a/app/Untitled.ipynb
+++ b/app/Untitled.ipynb
@@ -2,9 +2,102 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>county</th>\n",
+       "      <th>state</th>\n",
+       "      <th>fips</th>\n",
+       "      <th>cases</th>\n",
+       "      <th>deaths</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-01-21</td>\n",
+       "      <td>Snohomish</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>53061.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-01-22</td>\n",
+       "      <td>Snohomish</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>53061.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-01-23</td>\n",
+       "      <td>Snohomish</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>53061.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-01-24</td>\n",
+       "      <td>Cook</td>\n",
+       "      <td>Illinois</td>\n",
+       "      <td>17031.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-01-24</td>\n",
+       "      <td>Snohomish</td>\n",
+       "      <td>Washington</td>\n",
+       "      <td>53061.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         date     county       state     fips  cases  deaths\n",
+       "0  2020-01-21  Snohomish  Washington  53061.0      1     0.0\n",
+       "1  2020-01-22  Snohomish  Washington  53061.0      1     0.0\n",
+       "2  2020-01-23  Snohomish  Washington  53061.0      1     0.0\n",
+       "3  2020-01-24       Cook    Illinois  17031.0      1     0.0\n",
+       "4  2020-01-24  Snohomish  Washington  53061.0      1     0.0"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -17,9 +110,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>county</th>\n",
+       "      <th>state</th>\n",
+       "      <th>cases</th>\n",
+       "      <th>deaths</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>416</th>\n",
+       "      <td>2020-03-01</td>\n",
+       "      <td>New York City</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>448</th>\n",
+       "      <td>2020-03-02</td>\n",
+       "      <td>New York City</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>482</th>\n",
+       "      <td>2020-03-03</td>\n",
+       "      <td>New York City</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>518</th>\n",
+       "      <td>2020-03-04</td>\n",
+       "      <td>New York City</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>565</th>\n",
+       "      <td>2020-03-05</td>\n",
+       "      <td>New York City</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>954844</th>\n",
+       "      <td>2021-01-22</td>\n",
+       "      <td>New York City</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>558262</td>\n",
+       "      <td>26398.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>958090</th>\n",
+       "      <td>2021-01-23</td>\n",
+       "      <td>New York City</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>564245</td>\n",
+       "      <td>26466.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>961335</th>\n",
+       "      <td>2021-01-24</td>\n",
+       "      <td>New York City</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>569668</td>\n",
+       "      <td>26558.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>964580</th>\n",
+       "      <td>2021-01-25</td>\n",
+       "      <td>New York City</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>575332</td>\n",
+       "      <td>26648.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>967824</th>\n",
+       "      <td>2021-01-26</td>\n",
+       "      <td>New York City</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>580389</td>\n",
+       "      <td>26720.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>332 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              date         county     state   cases   deaths\n",
+       "416     2020-03-01  New York City  New York       1      0.0\n",
+       "448     2020-03-02  New York City  New York       1      0.0\n",
+       "482     2020-03-03  New York City  New York       2      0.0\n",
+       "518     2020-03-04  New York City  New York       2      0.0\n",
+       "565     2020-03-05  New York City  New York       4      0.0\n",
+       "...            ...            ...       ...     ...      ...\n",
+       "954844  2021-01-22  New York City  New York  558262  26398.0\n",
+       "958090  2021-01-23  New York City  New York  564245  26466.0\n",
+       "961335  2021-01-24  New York City  New York  569668  26558.0\n",
+       "964580  2021-01-25  New York City  New York  575332  26648.0\n",
+       "967824  2021-01-26  New York City  New York  580389  26720.0\n",
+       "\n",
+       "[332 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_nyc = df[df['county'] == 'New York City']\n",
     "df_nyc.drop(columns=['fips'])"
@@ -27,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
